DAS-2276: Update HyBIG reference images (lfs)

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,29 @@
 test/nsidc-icesat2/reference_files/*.h5 filter=lfs diff=lfs merge=lfs -text
 test/subset-band-name/reference_data/*.hdf filter=lfs diff=lfs merge=lfs -text
 test/opera-rtc-s1-browse/reference_data/*.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/ASTGTMV003_N00E022_dem.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r00c00.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r00c01.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r00c02.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r01c02.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/tiled/VCF5KYR_1991001_001_2018224205008.r00c02.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r01c00.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r01c03.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r01c04.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r02c00.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/tiled/VCF5KYR_1991001_001_2018224205008.r00c04.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r00c03.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r01c01.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/dimensions/VCF5KYR_1991001_001_2018224205008.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/scale_size/VCF5KYR_1991001_001_2018224205008.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/tiled/VCF5KYR_1991001_001_2018224205008.r00c00.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/tiled/VCF5KYR_1991001_001_2018224205008.r00c03.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/VCF5KYR_1991001_001_2018224205008.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r00c04.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r02c01.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r02c02.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r02c03.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/colour_map/PREFIRE_SAT2_2B-FLX_S07_R00_20210721013413_03040.nc.G00.r02c04.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/tiled/VCF5KYR_1991001_001_2018224205008.r00c01.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/ASTGTMV003_N00E022_dem.jpg filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/VCF5KYR_1991001_001_2018224205008.jpg filter=lfs diff=lfs merge=lfs -text
