--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 test/nsidc-icesat2/reference_files/*.h5 filter=lfs diff=lfs merge=lfs -text
 test/subset-band-name/reference_data/*.hdf filter=lfs diff=lfs merge=lfs -text
 test/opera-rtc-s1-browse/reference_data/*.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/**/*.png filter=lfs diff=lfs merge=lfs -text
+test/hybig/reference_data/**/*.jpg filter=lfs diff=lfs merge=lfs -text
