TRT-571 - Update regression tests for net2cog.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -59,6 +59,7 @@ jobs:
           -
             image: "net2cog"
             notebook: "net2cog_Regression.ipynb"
+            lfs: "true"
           -
             image: "opera-rtc-s1-browse"
             notebook: "opera-rtc-s1-browse_Regression.ipynb"
