--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,13 @@ test/subset-band-name/reference_data/*.hdf filter=lfs diff=lfs merge=lfs -text
 test/opera-rtc-s1-browse/reference_data/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_fland_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_nobs_40km_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_nobs_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_sss_smap_40km_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_gice_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_gland_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_sss_ref_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_sss_smap_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_sss_smap_uncertainty_reformatted.tif filter=lfs diff=lfs merge=lfs -text
+test/net2cog/reference_data/RSS_smap_SSS_L3_8day_running_2015_136_FNL_v04.0_surtep_reformatted.tif filter=lfs diff=lfs merge=lfs -text
