DAS-2292: Stub for regression tests.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -44,6 +44,11 @@ jobs:
             shared-utils: "true"
             lfs: "true"
           -
+            image: "smap-l2-subsetter"
+            notebook: "smap-l2-subsetter_Regression.ipynb"
+            shared-utils: "true"
+            lfs: "true"
+          -
             image: "swath-projector"
             notebook: "SwathProjector_Regression.ipynb"
           -
