--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@ test/subset-band-name/reference_data/*.hdf filter=lfs diff=lfs merge=lfs -text
 test/opera-rtc-s1-browse/reference_data/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+test/smap-l2-gridder/reference_files/SPL2SMP_E_reference.nc filter=lfs diff=lfs merge=lfs -text
+test/smap-l2-gridder/reference_files/SPL2SMAP_reference.nc filter=lfs diff=lfs merge=lfs -text
