DAS-2292: One more missing location.

--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -57,6 +57,7 @@ on:
           - hoss
           - hybig
           - query-cmr
+          - smap-l2-gridder
           - subset-band-name
           - swath-projector
           - trajectory-subsetter
