--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -146,7 +146,7 @@ jobs:
           EDL_USER: ${{ secrets.EDL_USER }}
           EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
           HARMONY_HOST_URL: ${{ needs.base.outputs.harmony_host_url }}
-          REGRESSION_TESTS_${{ upper(replace(matrix.service, '-', '_')) }}_IMAGE: ghcr.io/${{github.repository_owner}}/regression-tests-${{ matrix.service }}:latest
+          REGRESSION_TESTS_$(echo "${{ matrix.service }}" | tr '[:lower:]' '[:upper:]' | tr '-' '_')_IMAGE: ghcr.io/${{github.repository_owner}}/regression-tests-${{ matrix.service }}:latest
         run: ./run_notebooks.sh ${{ matrix.service }}
 
       - name: Save notebook as an artifact
