--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -139,6 +139,10 @@ jobs:
       - name: Pull Docker image
         run: docker pull ghcr.io/${{github.repository_owner}}/regression-tests-${{ matrix.service }}:${{ github.event.client_payload.docker-image-tag || inputs.docker-image-tag || 'latest' }}
 
+      - name: update testing image name
+        run: |
+          echo "REGRESSION_TESTS_$(echo "${{ matrix.service }}" | tr '[:lower:]' '[:upper:]' | tr '-' '_')_IMAGE=ghcr.io/${{ github.repository_owner }}/regression-tests-${{ matrix.service }}::${{ github.event.client_payload.docker-image-tag || inputs.docker-image-tag || 'latest' }}" >> $GITHUB_ENV
+
       - name: Execute notebook
         id: test-step
         working-directory: ./test
@@ -146,7 +150,6 @@ jobs:
           EDL_USER: ${{ secrets.EDL_USER }}
           EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
           HARMONY_HOST_URL: ${{ needs.base.outputs.harmony_host_url }}
-          REGRESSION_TESTS_$(echo "${{ matrix.service }}" | tr '[:lower:]' '[:upper:]' | tr '-' '_')_IMAGE: ghcr.io/${{github.repository_owner}}/regression-tests-${{ matrix.service }}:latest
         run: |
           env | grep REGRESSION
           ./run_notebooks.sh ${{ matrix.service }}
