--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -139,7 +139,7 @@ jobs:
       - name: Pull Docker image
         run: docker pull ghcr.io/${{github.repository_owner}}/regression-tests-${{ matrix.service }}:${{ github.event.client_payload.docker-image-tag || inputs.docker-image-tag || 'latest' }}
 
-      - name: update testing image name
+      - name: Update Test Image Name
         run: |
           echo "REGRESSION_TESTS_$(echo "${{ matrix.service }}" | tr '[:lower:]' '[:upper:]' | tr '-' '_')_IMAGE=ghcr.io/${{ github.repository_owner }}/regression-tests-${{ matrix.service }}:${{ github.event.client_payload.docker-image-tag || inputs.docker-image-tag || 'latest' }}" >> $GITHUB_ENV
 
@@ -150,9 +150,7 @@ jobs:
           EDL_USER: ${{ secrets.EDL_USER }}
           EDL_PASSWORD: ${{ secrets.EDL_PASSWORD }}
           HARMONY_HOST_URL: ${{ needs.base.outputs.harmony_host_url }}
-        run: |
-          env | grep REGRESSION
-          ./run_notebooks.sh ${{ matrix.service }}
+        run: ./run_notebooks.sh ${{ matrix.service }}
 
       - name: Save notebook as an artifact
         if: always()
