--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@ test/subset-band-name/reference_data/*.hdf filter=lfs diff=lfs merge=lfs -text
 test/opera-rtc-s1-browse/reference_data/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.jpg filter=lfs diff=lfs merge=lfs -text
+test/smap-l2-gridder/reference_files/SPL2SMP_E_reference.nc filter=lfs diff=lfs merge=lfs -text
+test/smap-l2-gridder/reference_files/SPL2SMAP_reference.nc filter=lfs diff=lfs merge=lfs -text
 test/net2cog/** !text !filter !merge !diff
 test/hybig/** !text !filter !merge !diff
 test/opera-rtc-s1-browse/** !text !filter !merge !diff
