add 'sambah' to notebook-test-suite.yml

--- a/.github/workflows/notebook-test-suite.yml
+++ b/.github/workflows/notebook-test-suite.yml
@@ -57,6 +57,7 @@ on:
           - hoss
           - hybig
           - query-cmr
+          - sambah
           - smap-l2-gridder
           - subset-band-name
           - swath-projector
@@ -69,7 +70,7 @@ on:
         default: 'latest'
 
   repository_dispatch:
-    types: [all,geoloco,harmony-gdal-adapter,harmony-netcdf-to-zarr,harmony-service-example,hoss,hybig,net2cog,swath-projector,trajectory-subsetter,opera-rtc-s1-browse]
+    types: [all,geoloco,harmony-gdal-adapter,harmony-netcdf-to-zarr,harmony-service-example,hoss,hybig,net2cog,swath-projector,trajectory-subsetter,sambah,opera-rtc-s1-browse]
     inputs:
       harmony-environment:
         required: true
