--- a/test/regridder/environment.yaml
+++ b/test/regridder/environment.yaml
@@ -3,12 +3,13 @@ channels:
   - conda-forge
   - nodefaults
 dependencies:
-  - python=3.9
-  - notebook=6.5.4
-  - papermill=2.3.4
-  - xarray == 2022.12.0
-  - numpy=1.24.3
-  - netCDF4=1.6.3
-  - pandas == 1.3.0
+  - python=3.12
+  - notebook==7.3.2
+  - papermill==2.6
+  - xarray==2025.1.2
+  - numpy==2.2.3
+  - netCDF4==1.7.2
+  - pandas==2.2.3
   - pip:
-    - harmony-py
+    - pip==25.0.1
+    - harmony-py==1.0.0
