--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ test/opera-rtc-s1-browse/reference_data/*.png filter=lfs diff=lfs merge=lfs -tex
 test/hybig/reference_data/**/*.png filter=lfs diff=lfs merge=lfs -text
 test/hybig/reference_data/**/*.jpg filter=lfs diff=lfs merge=lfs -text
 test/smap-l2-gridder/reference_files/**/*.nc filter=lfs diff=lfs merge=lfs -text
+test/regridder/reference_data/* filter=lfs diff=lfs merge=lfs -text
