TRT-572: Use shared utilities for regridder tests.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -39,6 +39,7 @@ jobs:
             image: "regridder"
             notebook: "Regridder_Regression.ipynb"
             lfs: "true"
+            shared-utils: "true"
           -
             image: "subset-band-name"
             notebook: "SubsetBandName_Regression.ipynb"
