TRT-572: Update python lib versions for regridder regression test (#151)

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -38,6 +38,7 @@ jobs:
           -
             image: "regridder"
             notebook: "Regridder_Regression.ipynb"
+            shared-utils: "true"
           -
             image: "subset-band-name"
             notebook: "SubsetBandName_Regression.ipynb"
