--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,7 @@ test/sambah/reference_files/spatial_only.nc4 filter=lfs diff=lfs merge=lfs -text
 test/sambah/reference_files/temp_var_bbox.nc4 filter=lfs diff=lfs merge=lfs -text
 test/sambah/reference_files/var_only.nc4 filter=lfs diff=lfs merge=lfs -text
 test/smap-l2-gridder/reference_files/**/*.nc filter=lfs diff=lfs merge=lfs -text
+test/net2cog/** !text !filter !merge !diff
+test/hybig/** !text !filter !merge !diff
+test/opera-rtc-s1-browse/** !text !filter !merge !diff
+test/regridder/** !text !filter !merge !diff
