TRT-680: Migrate HOSS tests to use hashed reference files.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -24,6 +24,7 @@ jobs:
           -
             image: "hoss"
             notebook: "HOSS_Regression.ipynb"
+            shared-utils: "true"
           -
             image: "hybig"
             notebook: "HyBIG_Regression.ipynb"
