--- a/test/hoss/environment.yaml
+++ b/test/hoss/environment.yaml
@@ -4,11 +4,10 @@ channels:
   - nodefaults
 dependencies:
   - python=3.12
-  - notebook=7.2.2
-  - papermill=2.6.0
-  - python-dateutil=2.8.2
-  - numpy=2.1.3
   - netCDF4=1.7.2
+  - notebook=7.3.2
+  - numpy=2.2.3
+  - papermill=2.6.0
+  - xarray=2025.6.1
   - pip:
-    - harmony-py==1.0.0
-    - xarray==2025.01.2
+    - harmony-py==1.2.0
