Cleans up notebook.
Removes extra cells at end
Removes duplicate markdown cells
Moves markdown cell into correct location.

Deletes utility file.
imports shared utils to print success messages.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -60,6 +60,7 @@ jobs:
           -
             image: "imagenator"
             notebook: "imagenator_Regression.ipynb"
+            shared-utils: "true"
           -
             image: "net2cog"
             notebook: "net2cog_Regression.ipynb"
