--- a/test/Makefile
+++ b/test/Makefile
@@ -20,7 +20,8 @@ hybig-image: Dockerfile hybig/environment.yaml
 
 imagenator-image: Dockerfile imagenator/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-imagenator:latest -f ./Dockerfile \
-	--build-arg notebook=imagenator_Regression.ipynb --build-arg sub_dir=imagenator .
+	--build-arg notebook=imagenator_Regression.ipynb --build-arg sub_dir=imagenator \
+	--build-arg shared_utils=true .
 
 nsidc-icesat2-image: Dockerfile nsidc-icesat2/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-nsidc-icesat2:latest -f ./Dockerfile \
