TRT-500: Add test suite for IMAGENATOR service chain (#187)
---------

Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>
Co-authored-by: Syed R Rizvi <syed.r.rizvi@nasa.gov>
Co-authored-by: Matt Savoie <savoie@colorado.edu>
Co-authored-by: Owen Littlejohns <owen.m.littlejohns@nasa.gov>

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -59,6 +59,10 @@ jobs:
             image: "geoloco"
             notebook: "Geoloco_Regression.ipynb"
           -
+            image: "imagenator"
+            notebook: "imagenator_Regression.ipynb"
+            shared-utils: "true"
+          -
             image: "net2cog"
             notebook: "net2cog_Regression.ipynb"
           -
