--- a/test/Makefile
+++ b/test/Makefile
@@ -19,6 +19,11 @@ hybig-image: Dockerfile hybig/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-hybig:latest -f ./Dockerfile \
 	--build-arg notebook=HyBIG_Regression.ipynb --build-arg sub_dir=hybig .
 
+imagenator-image: Dockerfile imagenator/environment.yaml
+	docker build -t ghcr.io/nasa/regression-tests-imagenator:latest -f ./Dockerfile \
+	--build-arg notebook=imagenator_Regression.ipynb --build-arg sub_dir=imagenator \
+	--build-arg shared_utils=true .
+
 nsidc-icesat2-image: Dockerfile nsidc-icesat2/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-nsidc-icesat2:latest -f ./Dockerfile \
 	--build-arg notebook=NSIDC-ICESAT2_Regression.ipynb --build-arg sub_dir=nsidc-icesat2 \
@@ -75,6 +80,7 @@ images: harmony-image \
 	hga-image \
 	hoss-image \
 	hybig-image \
+	imagenator-image \
 	nsidc-icesat2-image \
 	regridder-image \
 	smap-l2-gridder-image \
