--- a/test/sambah/environment.yaml
+++ b/test/sambah/environment.yaml
@@ -4,9 +4,12 @@ channels:
   - nodefaults
 dependencies:
   - python=3.12
-  - notebook=7.2.2
-  - papermill==2.6.0
-  - numpy=2.1.3
+  - harmony-py=1.2.0
   - netCDF4=1.7.2
-  - xarray=2024.10.0
-  - harmony-py=1.0.0
+  - notebook=7.2.2
+  - numpy=2.1.3
+  - papermill==2.6.0
+  - xarray=2025.6.1
+  - pip:
+    - earthdata-hashdiff==1.0.0
+    - pip==25.0.1
