DAS-2397: Stub of nsidc-smap test suite.
Adds required configuration to build images and run GitHub ci/cd.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -33,6 +33,10 @@ jobs:
             notebook: "NSIDC-ICESAT2_Regression.ipynb"
             shared-utils: "true"
           -
+            image: "nsidc-smap"
+            notebook: "nsidc-smap_Regression.ipynb"
+            shared-utils: "true"
+          -
             image: "regridder"
             notebook: "Regridder_Regression.ipynb"
             shared-utils: "true"
