TRT-635: Convert HGA test suite to use earthdata-hashdiff.

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -21,6 +21,7 @@ jobs:
           -
             image: "hga"
             notebook: "HGA_Regression.ipynb"
+            shared-utils: "true"
           -
             image: "hoss"
             notebook: "HOSS_Regression.ipynb"
