adding giovanni averaging service regression test suite

--- a/.github/workflows/build-all-images.yml
+++ b/.github/workflows/build-all-images.yml
@@ -64,6 +64,9 @@ jobs:
             image: "geoloco"
             notebook: "Geoloco_Regression.ipynb"
           -
+            image: "giovanni-averaging-service"
+            notebook: "GiovanniAveragingService_Regression.ipynb"
+          -
             image: "imagenator"
             notebook: "imagenator_Regression.ipynb"
             shared-utils: "true"
