--- a/test/Makefile
+++ b/test/Makefile
@@ -68,6 +68,10 @@ geoloco-image: Dockerfile geoloco/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-geoloco:latest -f ./Dockerfile \
 	--build-arg notebook=Geoloco_Regression.ipynb --build-arg sub_dir=geoloco .
 
+giovanni-averaging-service-image: Dockerfile giovanni-averaging-service/environment.yaml
+	docker build -t ghcr.io/nasa/regression-tests-giovanni-averaging-service:latest -f ./Dockerfile \
+	--build-arg notebook=GiovanniAveragingService_Regression.ipynb --build-arg sub_dir=giovanni-averaging-service .
+
 net2cog-image: Dockerfile net2cog/environment.yaml
 	docker build -t ghcr.io/nasa/regression-tests-net2cog:latest -f ./Dockerfile \
 	--build-arg notebook=net2cog_Regression.ipynb --build-arg sub_dir=net2cog .
@@ -96,6 +100,7 @@ images: harmony-image \
 	trajectory-subsetter-image \
 	variable-subsetter-image \
 	geoloco-image \
+	giovanni-averaging-service-image \
 	net2cog-image \
 	sambah-image \
 	opera-rtc-s1-browse-image
